Issue #3: Ajouter validation ou messages d'erreur

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -210,12 +210,11 @@ input {
 }
 .formData[data-error]::after {
   content: attr(data-error);
-  font-size: 0.4em;
+  font-size: 0.6em;
   color: #e54858;
   display: block;
   margin-top: 7px;
   margin-bottom: 7px;
-  text-align: right;
   line-height: 0.3;
   opacity: 0;
   transition: 0.3s;
@@ -223,6 +222,7 @@ input {
 .formData[data-error-visible="true"]::after {
   opacity: 1;
 }
+.formData[data-error-visible="true"] .checkbox-input:not(.optional) + label .checkbox-icon,
 .formData[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
 }
